fix basket item delete 'jump'

--- a/resources/scss/ceres/views/Templates/BasketPreview/_basket-preview-item.scss
+++ b/resources/scss/ceres/views/Templates/BasketPreview/_basket-preview-item.scss
@@ -101,6 +101,9 @@
 	    line-height: 1;
 	    cursor: pointer;					
 		color: $gray-lighter;
+		text-decoration: none;
+		width: 114px;
+		text-align: left;
 
 		&:hover {
 			color:$brand-danger;
